hopefully fixed text clipping issue on mobile fingies crossed

--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -311,7 +311,7 @@
 
   .landing .moreContent {
     flex-direction: column;
-    height: 2400px;
+    height: 2450px;
     text-align: center;
     margin-top: 0px;
   }
